--- a/notes/misc.html
+++ b/notes/misc.html
@@ -14,7 +14,7 @@
   <body>
     <div class="main">
       <div class="text">
-        <h2>PWN</h2>
+        <h2>Misc</h2>
         <h3>Subsection</h3>
         <div class="footnotes"></div>
       </div>
