--- a/notes/web.html
+++ b/notes/web.html
@@ -14,8 +14,9 @@
   <body>
     <div class="main">
       <div class="text">
-        <h2>PWN</h2>
-        <h3>Subsection</h3>
+        <h2>Web</h2>
+        <h3>PHP</h3>
+        <h4>stupidity</h4>
         <div class="footnotes"></div>
       </div>
     </div>
